# DAQ-Technical-Assessment

./: .gitmodules  brainstorming.md
firmware/: CMakeLists.txt  Dockerfile  answer.txt
firmware/solution/: CMakeLists.txt  main.cpp
